--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -176,11 +176,81 @@
                         android:layout_marginBottom="10sp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="# Lending Books"
+                        android:text="# Lending"
                         android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/txtViewLending"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="# Borrowed Books"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewBorrowedBooks"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Return"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewReturn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -210,7 +280,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/txtViewReturn"
+                        android:id="@+id/txtViewOverDue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
