--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -38,7 +38,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp"
+            android:layout_margin="10sp"
             android:orientation="horizontal">
 
             <TextView
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_weight="1"
                 android:text="Current Admin: " />
 
             <TextView
@@ -55,7 +56,16 @@
                 android:layout_marginLeft="15sp"
                 android:textStyle="bold"
                 android:textSize="20sp"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="TextView" />
+
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50sp"
+                android:text="Logout" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
