--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -135,7 +135,7 @@
                     android:layout_width="20sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Email" />
+                    android:text="Email: " />
 
                 <EditText
                     android:id="@+id/editTxtEmail"
@@ -170,7 +170,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20sp"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         android:text="Share" />
                 </LinearLayout>
 
