--- a/app/src/main/res/layout/activity_book_return.xml
+++ b/app/src/main/res/layout/activity_book_return.xml
@@ -56,7 +56,7 @@
                     android:inputType="textPersonName" />
 
                 <ImageButton
-                    android:id="@+id/btnScanUID"
+                    android:id="@+id/btnReturnUID"
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:layout_marginLeft="20sp"
@@ -88,7 +88,7 @@
                     android:inputType="textPersonName" />
 
                 <ImageButton
-                    android:id="@+id/btnScanBook1"
+                    android:id="@+id/btnReturnBook1"
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:layout_marginLeft="20sp"
@@ -120,7 +120,7 @@
                     android:inputType="textPersonName" />
 
                 <ImageButton
-                    android:id="@+id/btnScanBook2"
+                    android:id="@+id/btnReturnBook2"
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:layout_marginLeft="20sp"
