--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -39,21 +39,20 @@
 
                 <TextView
                     android:id="@+id/txtUserId"
-                    android:layout_width="20sp"
+                    android:layout_width="80sp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:visibility="invisible"
                     android:text="User ID:" />
 
-                <EditText
+                <TextView
                     android:id="@+id/editTxtUserId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:enabled="false"
-                    android:visibility="invisible"
-                    android:inputType="textPersonName" />
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:visibility="invisible" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -150,6 +149,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20sp"
                 android:orientation="vertical">
 
 
@@ -163,7 +163,7 @@
                         android:id="@+id/generateButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Generate QR" />
+                        android:text="Generate QR Code" />
 
                     <Button
                         android:id="@+id/btnShare"
@@ -187,22 +187,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginTop="20sp"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/btnAddUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="invisible"
+                    android:layout_margin="15sp"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:text="@string/add" />
 
                 <Button
                     android:id="@+id/btnCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5sp"
+                    android:layout_margin="15sp"
                     android:layout_weight="1"
                     android:text="@string/cancel"
                     android:theme="@style/Button" />
