--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -39,7 +39,10 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="10sp"
+            android:layout_margin="15sp"
+            android:paddingBottom="30sp"
+            android:paddingTop="20sp"
             android:layout_weight="1" />
+
     </LinearLayout>
 </FrameLayout>
