--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,6 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="15sp"
+            android:paddingBottom="30sp"
+            android:paddingTop="20sp"
             android:layout_weight="1" />
     </LinearLayout>
 
